MB-544. Changed Trowser header text from <h3> to <h4> to fix vertical alignment of text.

--- a/ui/client-react/src/components/trowser/trowser.scss
+++ b/ui/client-react/src/components/trowser/trowser.scss
@@ -36,7 +36,7 @@ $action-separator-color: #486c8f;
         display:flex;
         align-items:center;
         .qbIcon {
-            font-size:20px;
+            font-size:15px;
             vertical-align: baseline;
         }
         .breadcrumbs {
@@ -44,7 +44,7 @@ $action-separator-color: #486c8f;
             margin-left:16px;
             overflow:hidden;
             white-space:nowrap;
-            h3 {
+            h4 {
                 overflow:hidden;
                 text-overflow:ellipsis;
             }
